fix alignment issue

--- a/melody_hopper/src/Components/MicButton/MicButton.scss
+++ b/melody_hopper/src/Components/MicButton/MicButton.scss
@@ -1,26 +1,3 @@
-// .micButton {
-//     position: fixed;
-//     top: 2px;
-//     left: 10px;
-//     background-color: #28a745; 
-//     color: white; 
-//     border: none; 
-//     border-radius: 50%;
-//     height: 3rem;
-//     width: 3rem;
-//     font-size: 16px; 
-//     display: flex; 
-//     justify-content: center;
-//     align-items: center;
-//     cursor: pointer;
-//     transition: background-color 0.3s ease; 
-//     z-index: 10;
-
-//     &:hover {
-//         background-color: red;
-//     }
-// }
-
 .mic {
     background-color: #4CAF50; 
     color: white;
@@ -30,5 +7,7 @@
     border-radius: 50%;
     height: 50px;
     width: 50px;
-    position: fixed;
+    position: absolute;
+    left: 50%;
+    bottom: 3px;
 }
