--- a/melody_hopper/src/pages/Exercise/Exercise.scss
+++ b/melody_hopper/src/pages/Exercise/Exercise.scss
@@ -4,21 +4,21 @@
     align-items: center;
     height: 100%;
     background: white;
-    overflow-y:hidden; 
-    margin-top: 2rem;
-    box-sizing: border-box;
 
     &__wall {
         display: flex;
         height: 80%;
-        margin: auto;
+        margin-top: 3rem;
+        width: 100%;
     }
 
     &__side-panel {
         height: 78%;
         background-color: white;
         box-sizing: border-box;
-        position: fixed;
+        position: absolute;
+        left: 0;
+        top: 3rem;
     }
 
     &__ref-note {
@@ -41,6 +41,7 @@
      display: flex;
      justify-content: center;
      height: 11vh;
+     width: 100%;
     }
 
     &__mic {
@@ -66,7 +67,7 @@
     &__row {
         display: flex;
         height: calc(100% / 13); 
-        margin: 3px 3px 0 3px;
+        margin: 2.1px 3px 0 3px;
         gap: 3px;
     }
 
